BUILDENV: Updates for gradle 8.4